--- a/estilos/media-queries.css
+++ b/estilos/media-queries.css
@@ -1,49 +1,41 @@
 @charset "UTF-8"; 
 
-@media screen and (max-width: 687px) {
+@media screen and (max-width: 699px) {
+
+    body {
+        height: 100vh;
+        display: grid;
+        place-items: center;
+    }
+
+    header {
+        display: none;
+    }
 
     main {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100vw;
+        display: none;
     }
 
-    section.quadro-principal {
-        height: 400px;
+    section#erro {
+        display: grid;
+        place-items: center;
+        background-color: rgb(204, 204, 204);
         width: 80%;
-        background-color: white;
-        border: 7px inset rgb(247, 243, 28);
-        border-radius: 5px;
+        border: 5px inset black;
+        border-radius: 10px;
     }
 
-    .texto-atencao {
-        font-size: 1em;
-        padding: 20px;
-        color: white;
-    }
-
-    .roda-pe {
-        display: flex;
-        margin-top: -15px;
-        font-size: 2em;
+    section#erro > p {
         padding: 30px;
+        font-size: 1.5em;
     }
 
-    #menu h1 {
-        margin: 30px;
-    }
-
-    .botoes-menu {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .botoes-menu > button {
-        padding: 5px;
-        font-size: 1.1em;
-        margin: 20px;
-        color: white;
-        text-shadow: 1px 1px 1px black;
+    .fa-rotate-left {
+        text-align: center;
+        color: rgb(255, 255, 255);
+        background-color: rgba(0, 0, 0, 0.514);
+        padding: 10px;
+        border-radius: 10px;
+        font-size: 5em;
     }
 }
